# backend/src/entrypoints/api/openApi/openapi.json
@@ -20,7 +20,7 @@
   ],
   "info": {
     "version": "1.0.0",
-    "title": "My API"
+    "title": "Starter API"
   },
   "components": {
     "schemas": {
@@ -113,6 +113,7 @@
           "admin",
           "user"
         ],
+        "operationId": "userGetById",
         "parameters": [
           {
             "schema": {
@@ -183,6 +184,7 @@
     },
     "/api/public/auth/login": {
       "post": {
+        "operationId": "authLogin",
         "tags": [
           "public",
           "auth"
@@ -242,6 +244,7 @@
           "public",
           "auth"
         ],
+        "operationId": "authRegister",
         "requestBody": {
           "content": {
             "application/json": {
@@ -297,6 +300,7 @@
           "public",
           "auth"
         ],
+        "operationId": "authRefresh",
         "requestBody": {
           "content": {
             "application/json": {
@@ -350,6 +354,7 @@
           "public",
           "auth"
         ],
+        "operationId": "authResetPassword",
         "requestBody": {
           "content": {
             "application/json": {
@@ -391,6 +396,7 @@
           "public",
           "auth"
         ],
+        "operationId": "authResetPasswordRequest",
         "requestBody": {
           "content": {
             "application/json": {
@@ -429,6 +435,7 @@
           "public",
           "auth"
         ],
+        "operationId": "authValidateAccount",
         "requestBody": {
           "content": {
             "application/json": {
@@ -478,6 +485,7 @@
           "public",
           "auth"
         ],
+        "operationId": "authResendValidationEmail",
         "requestBody": {
           "content": {
             "application/json": {
@@ -526,6 +534,7 @@
           "public",
           "healthcheck"
         ],
+        "operationId": "healthcheck",
         "responses": {
           "200": {
             "description": "Healthcheck OK",
