# backend/src/entrypoints/api/routes/admin/index.ts
@@ -1,12 +1,12 @@
 import { authorizationMiddleware } from '@/entrypoints/api/middlewares/authorization/authorization.middleware';
 
-import { userGetOneRoute } from './userGetOne';
+import { userGetByIdRoute } from './userGetById';
 import { getHonoApp } from '../../loader/getHonoApp';
 
 const adminRouter = getHonoApp();
 
 adminRouter
   .use(authorizationMiddleware({ shouldBeAdmin: true, optional: false }))
-  .route('/user', userGetOneRoute);
+  .route('/user', userGetByIdRoute);
 
 export { adminRouter };
